fix: align LoadingOverlay with detroit updates

--- a/src/overlays/LoadingOverlay.scss
+++ b/src/overlays/LoadingOverlay.scss
@@ -1,4 +1,6 @@
 .loading-overlay {
+  --padding: inherit;
+  padding: var(--padding);
   @apply relative;
   @apply pointer-events-none;
 
